# proto-test

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json
docs/benchmarks/: final-report-phases-0-10.md  final-report-phases-0-10.zh-CN.md  final-report-phases-0-11.md  final-report-phases-0-11.zh-CN.md  final-report-phases-0-8.md  final-report-phases-0-8.zh-CN.md  final-report-phases-0-9.md  final-report-phases-0-9.zh-CN.md  phase1-throughput-size-analysis.md  phase10-json-shootout-analysis.md  phase11-yyjson-protobuf-pk-analysis.md  phase12-shape-codec-analysis.md  phase2-field-fillrate-numeric-encoding-analysis.md  phase3-scalability-analysis.md  phase4-memory-arena-analysis.md  phase5-api-overhead-analysis.md  phase6-cpu-microarch-analysis.md  phase6-feasibility-note.md  phase7-concurrency-analysis.md  phase8-malformed-input-analysis.md  phase9-sbe-comparison-analysis.md
docs/superpowers/plans/: 2026-06-17-benchmark-phase0-1.md  2026-06-17-im-chat-protobuf-experiment.md  2026-06-18-benchmark-phase2.md  2026-06-18-benchmark-phase3.md  2026-06-18-benchmark-phase4.md  2026-06-18-benchmark-phase5.md  2026-06-18-benchmark-phase7.md  2026-06-18-benchmark-phase8.md  2026-06-19-benchmark-phase9-sbe.md  2026-06-20-benchmark-phase10-json-shootout.md  2026-06-21-benchmark-phase11-yyjson-protobuf-pk.md
docs/superpowers/specs/: 2026-06-17-benchmark-phase0-1-design.md  2026-06-17-im-chat-protobuf-design.md  2026-06-18-benchmark-phase2-design.md  2026-06-18-benchmark-phase3-design.md  2026-06-18-benchmark-phase4-design.md  2026-06-18-benchmark-phase5-design.md  2026-06-18-benchmark-phase7-design.md  2026-06-18-benchmark-phase8-design.md  2026-06-19-benchmark-phase9-sbe-design.md  2026-06-20-benchmark-phase10-json-shootout-design.md  2026-06-21-benchmark-phase11-yyjson-protobuf-pk-design.md
proto/: chat.proto  shape.proto  shape_full.proto
results/: full-runtime-concurrency-repeated-2026-06-20.json  lite-runtime-concurrency-repeated-2026-06-20.json  lite-runtime-rerun-2026-06-20.json  phase1-2026-06-17.json  phase10-2026-06-20.json  phase11-2026-06-21.json  phase12-shape-full-random-pts-2026-06-28.json  phase12-shape-random-pts-2026-06-28.json  phase2-2026-06-18.json  phase3-2026-06-18.json  phase4-2026-06-18.json  phase4-arena-reset-2026-06-19.json  phase4-arena-reset10-2026-06-19.json  phase5-2026-06-18.json  phase6-2026-06-21.txt  phase7-2026-06-18.json  phase7-arena-2026-06-19.json  phase8-2026-06-18.json  phase9-2026-06-19.json
schema/: chat.sbe.xml
src/: alloc_counter.cpp  alloc_counter.h  bench.cpp  json_cjson_fixtures.cpp  json_cjson_fixtures.h  json_message_decoded.h  json_nlohmann_fixtures.cpp  json_nlohmann_fixtures.h  json_rapidjson_fixtures.cpp  json_rapidjson_fixtures.h  json_yyjson_fixtures.cpp  json_yyjson_fixtures.h  main.cpp  message_fixtures.cpp  message_fixtures.h  reflection_demo.cpp  sbe_message_fixtures.cpp  sbe_message_fixtures.h  shape_bench.cpp  shape_fixtures.cpp  shape_fixtures.h  shape_full_bench.cpp
